Name:             artRank
Version:          1.0
License:          BSD3
Cabal-Version:    >= 1.9.0
Build-Type:       Simple

Executable art-rank
  Main-is:        src/main.hs
  Build-Depends:  base ==4.5.*,
                  persistent,
                  persistent-postgresql,
                  persistent-template,
                  transformers,
                  hxt,
                  url,
                  HTTP,
                  network,
                  feed
